<resources>
    <string name="app_name">21 Day Advantage</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_today">Go to Today</string>
    <string name="menu_undo">Undo and Go Back</string>
    <string name="menu_delete">Delete and Go Back</string>
    <string name="menu_save">Save</string>
    <string name="menu_signout">Sign Out</string>

    <string name="header_calendar">Calendar</string>
    <string name="header_information">Information</string>
    <string name="header_statistics">Statistics</string>
    <string name="header_exercise">Exercise</string>
    <string name="header_gratitudes">Gratitudes</string>
    <string name="header_journal">Journal</string>
    <string name="header_kindness">Random Act of Kindness</string>
    <string name="header_meditation">Meditation</string>

    <string name="calendar_legend_completed">Completed</string>
    <string name="calendar_legend_inprogress">In Progress</string>
    <string name="calendar_legend_unstarted">Unstarted</string>

    <string name="popup_entry_deleted">Deleted</string>
    <string name="popup_entry_cancelled">Changes Cancelled</string>
    <string name="popup_entry_saved">Changes Saved</string>
    <string name="popup_today">Go to Today</string>

    <string name="dashboard_stats_days_completed">In all, you have completed</string>
    <string name="dashboard_stats_longest_streak">Your longest streak</string>
    <string name="dashboard_stats_current_streak">Your current streak is</string>
    <string name="dashboard_stats_day">day</string>
    <string name="dashboard_stats_days">days</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>s

    <string name="login_firebase_failed">Firebase Sign-In Failed</string>
    <string name="login_google_error_resolved">Google Play Services Error Resolved</string>
    <string name="login_google_failed">Google Sign-In Failed</string>

</resources>
