<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:id="@+id/coordinator"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:background="@color/white"
                                                 android:fitsSystemWindows="true"
                                                 tools:context="ai.victorl.toda.screens.addeditentry.AddEditEntryActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/AppTheme.Toolbar"
            app:popupTheme="@style/AppTheme.Popup">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"/>

    <com.github.clans.fab.FloatingActionMenu
        style="@style/AppTheme.FabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_cancel"
            style="@style/AppTheme.FabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_undo_white_24px"
            app:fab_label="@string/menu_undo"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_delete"
            style="@style/AppTheme.FabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete_forever_white_24dp"
            app:fab_label="@string/menu_delete"/>

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_save"
            style="@style/AppTheme.FabButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save_white_24px"
            app:fab_label="@string/menu_save"/>

    </com.github.clans.fab.FloatingActionMenu>

</android.support.design.widget.CoordinatorLayout>
