<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    style="@style/AppCardView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.LinearLayoutCompat
            style="@style/AppCardView.HeaderLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_poll_black_24dp"
                android:tint="@color/white"/>

            <TextView
                style="@style/AppCardView.HeaderTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header_statistics"
                android:textAppearance="@style/AppCardView.HeaderTextAppearance"/>

        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_stats_current_streak"
                    android:textAppearance="@style/AppCardView.DashboardStatTitleTextAppearance"/>

                <TextView
                    android:id="@+id/stats_current_streak"
                    style="@style/AppCardView.DashboardStatValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/AppCardView.DashboardStatValueTextAppearance"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_stats_longest_streak"
                    android:textAppearance="@style/AppCardView.DashboardStatTitleTextAppearance"/>

                <TextView
                    android:id="@+id/stats_longest_streak"
                    style="@style/AppCardView.DashboardStatValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/AppCardView.DashboardStatValueTextAppearance"/>

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dashboard_stats_days_completed"
                    android:textAppearance="@style/AppCardView.DashboardStatTitleTextAppearance"/>

                <TextView
                    android:id="@+id/stats_created_completed"
                    style="@style/AppCardView.DashboardStatValueTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/AppCardView.DashboardStatValueTextAppearance"/>

            </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.CardView>
